before changing score calculation for chaining